<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Drupp</string>
    <string name="tag_line">No Bar. Just Better</string>
    <string name="get_started">Lets get you started</string>
    <string name="phone_num">+234 phone number</string>
    <string name="resend_code">
        <u>Resend Code</u>
    </string>
    <string name="default_phone_number">+49 157 70689145</string>
    <string name="tv_please_enter_otp">Please enter the verification code sent to: \n +%1$d-%2$s</string>
    <string name="verif_code">Verification Code</string>
    <string name="terms_condition">Terms and Condition</string>
    <string name="terms_condition_noUnderline">Terms and Conditions</string>
    <string name="login">
        <u>
            LogIn
        </u>
    </string>
    <string name="sign_up">Sign Up</string>
    <string name="have_account">Already have an account?</string>
    <string name="enter_details">Enter your details</string>
    <string name="by_signing">By signing up, you agree to our <u>Terms and Conditions</u>.</string>
    <string name="t_and_c"><u>Terms and Conditions</u></string>
    <string name="title_activity_ride_">Ride_Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="emergency">Emergency</string>
    <string name="departure">From</string>
    <string name="destination">To</string>
    <string name="pool_ride">Pool Ride</string>
    <string name="single_ride">Single Ride</string>
    <string name="with_one">With one</string>
    <string name="with_two">With two</string>
    <string name="with_three">With three</string>
    <string name="with_one_10">With one ₦10</string>
    <string name="with_two_5">With two ₦5</string>
    <string name="with_three_3_3">With three ₦3.3</string>
    <string name="ride_now">Ride Now</string>
    <string name="ride_later">Ride Later</string>
    <string name="schedule_ride">Schedule Ride</string>
    <string name="schedule_a_ride">Schedule a Ride</string>
    <string name="completed_rides">Trip History</string>
    <string name="completed_rides_label">Completed Rides</string>
    <string name="post_rides">Post Rides</string>
    <string name="payments">Payments</string>
    <string name="shoping">Shopping</string>
    <string name="newsFeeds">News Feeds</string>
    <string name="support">Support</string>
    <string name="legal">Legal</string>
    <string name="refferal">Referral</string>
    <string name="settings">Settings</string>
    <string name="_notification">Notification</string>
    <string name="naira">₦ </string>
    <string name="tnc">Terms and Condition</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="new_driver">New User? Sign Up Here </string>
    <string name="referal_code">Referral Code (Optional)</string>
    <string name="jhon_gmail_com">jhon@gmail.com</string>
    <string name="email">Email</string>
    <string name="upload_profile_image">+Upload Profile Image (Optional)</string>
    <string name="mobile_number">Mobile</string>
    <string name="_7832552256">7832552256</string>
    <string name="jhon_smith"> %1$S</string>
    <string name="jhon_smith_name">Jhon Smith</string>
    <string name="enter_pickup_location">Enter Pickup</string>
    <string name="type_of_driver_you_want_to_ride_with">Type of driver you want to ride with-</string>
    <string name="chatty">Chatty</string>
    <string name="conversational_quit_indifferent">Conversational Quit Indifferent</string>
    <string name="write_your_preferences_here">Write your preferences here.</string>
    <string name="indore">Indore</string>
    <string name="preference">Preference</string>
    <string name="done">Done</string>
    <string name="number_of_co_riders_you_want">Number of co-riders you want-</string>
    <string name="setting">Settings</string>
    <string name="vehicle_type">Vehicle type:</string>
    <string name="driver_type">Driver type:</string>
    <string name="driver_type_">Driver type</string>
    <string name="english">English</string>
    <string name="shopping">Shop</string>
    <string name="news_feed">News</string>
    <string name="yoruba">Yoruba</string>
    <string name="text_adv_shopping1">Want to utilize your time?\nShop with us</string>
    <string name="text_adv_shopping2">Shop with us</string>
    <string name="default_news_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula in libero. Sed dignissim lacinia nunc.

Curabitur tortor. Pellentesque nibh. Aenean quam. In scelerisque sem at dolor. Maecenas mattis. Sed convallis tristique sem. Proin ut ligula vel nunc egestas porttitor. Morbi lectus risus, iaculis vel, suscipit quis, luctus non, massa. Fusce ac turpis quis ligula lacinia aliquet. Mauris ipsum. Nulla metus, ullamcorper vel, tincidunt sed, euismod in, nibh. Quisque volutpat condimentum velit.

iscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla.iscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla.iscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla.iscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla.iscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla.iscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla.iscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla.iscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla.iscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla.iscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla.iscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla. Suspendisse potenti. Nunc feugiat mi a tellus consequat imperdiet. Vestibulum sapien. Proiscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla. Suspendisse potenti. Nunc feugiat mi a tellus consequat imperdiet. Vestibulum sapien. Proiscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla. Suspendisse potenti. Nunc feugiat mi a tellus consequat imperdiet. Vestibulum sapien. Proiscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla. Suspendisse potenti. Nunc feugiat mi a tellus consequat imperdiet. Vestibulum sapien. Proin quam. Etiam ultrices. Suspendisse in justo eu magna luctus suscipit.
   </string>
    <string name="news_headline">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="user_id">User Id</string>
    <string name="coupon_number">Coupon Code</string>
    <string name="name_u">Name</string>
    <string name="date_added">Date</string>
    <string name="drupp_media">Drupp Media</string>
    <string name="your_ride_is_in_progress">Welcome %1$s, your ride is in progress</string>
    <string name="driver">(Driver)</string>
    <string name="_537">537</string>
    <string name="rides_completed">537 \nRides Completed</string>
    <string name="_3_8" />
    <string name="rating">3.8* \nRating</string>
    <string name="rating2">3.8</string>
    <string name="_79" />
    <string name="positive_review">79% \nPositive Review</string>
    <string name="cab_number">Cab Number</string>
    <string name="micro">Micro</string>
    <string name="without_ac">Regular</string>
    <string name="with_ac">Luxury</string>
    <string name="bus">Bus</string>
    <string name="mini">Mini</string>
    <string name="sedan">Sedan</string>
    <string name="alto_k10">Alto k10</string>
    <string name="_support">Support</string>
    <string name="send_cab_details_to_your_contact">Share Cab\nDetails</string>
    <string name="rate_review_now">Rate / Review Now</string>
    <string name="contact">Contact</string>
    <string name="mp_09_ab_1455">MP 09 AB 1455</string>
    <string name="cab_type">Cab Type</string>
    <string name="getting_bored">Getting Bored?</string>
    <string name="increase_your_knowledge_with_latest_news_now">Increase your knowledge with latest NEWS now.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="notification">Notifications</string>
    <string name="clear"><u>Clear</u></string>
    <string name="notificatio_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit.In scelerisque sem at dolor. Maecenas mattis.</string>
    <string name="_1_hour_ago">at %1$s</string>
    <string name="capacity">Capacity</string>
    <string name="fare">Fare</string>
    <string name="per_minute_wait_time">Per minute wait time</string>
    <string name="_4_people">4 People</string>
    <string name="_4_55">$4.55</string>
    <string name="_0_55">$0.55</string>
    <string name="confirm_go">Confirm Go</string>
    <string name="cancel" tools:override="true">Cancel</string>
    <string name="phone_number">Phone Number</string>
    <string name="last_name">Last Name:</string>
    <string name="first_name">First Name:</string>
    <string name="dummy_price">$1.57</string>
    <string name="price">PRICE</string>
    <string name="made_in">MADE IN</string>
    <string name="dummy_country">India</string>
    <string name="contact_seller">Contact of Seller</string>
    <string name="dummy_country_seller">Indore,777777777</string>
    <string name="select">Select</string>
    <string name="free_shipping_for_indore">Free shipping for Indore (5 days)</string>
    <string name="size">Size</string>
    <string name="small">S</string>
    <string name="medium">M</string>
    <string name="large">L</string>
    <string name="color">color</string>
    <string name="blue">blue</string>
    <string name="red">red</string>
    <string name="delivery">DELIVERY</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="original_price">Original Price</string>
    <string name="discount_">Discount</string>
    <string name="dummy_price_">USD 12.05</string>
    <string name="total_price">TOTAL PRICE</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="zip_postal_code">ZIP / Postal Code</string>
    <string name="cont">Continue</string>
    <string name="book_ride">Book Ride</string>
    <string name="dummy_name">JOHN</string>
    <string name="name_1">Passenger 1</string>
    <string name="name_2">Passenger 2</string>
    <string name="max_4_seats">Max 3 seats per user*</string>
    <string name="passengers">Passengers:</string>
    <string name="extra_seats">Extra Seats:</string>
    <string name="remove">Remove</string>
    <string name="are_you_sure_you_want_to_remove">Are you sure you want to remove this product?</string>
    <string name="remove_product">Remove Product</string>
</resources>